fix(RPC: Max height + overflow applies only to list of stops

--- a/assets/css/_route_properties_card.scss
+++ b/assets/css/_route_properties_card.scss
@@ -151,7 +151,7 @@
   border: none;
 }
 
-.m-route-properties-card__details-section.variant-stop-list {
+.m-route-properties-card__details-section.variant-stop-list ol {
   max-height: 490px;
   overflow: auto;
   li {
